tests/fsharp/typecheck/overloads/neg_System.Drawing.Graphics.DrawRectangleOverloadList.fsx
open System.Drawing
let g : Graphics = null
let p : Pen = null
let x = 1.f
let y = 1.f
let w = 1.f
let h = 1

g.DrawRectangle(p, x, y, w, h)
g.DrawRectangle(p, 4, y, w, 5m)